--- a/Web-Service/Readme
+++ b/Web-Service/Readme
@@ -1,2 +1,2 @@
 # Web services with Express JS
-![Captura de la tarea funcionando](Services.png)
+![Captura de la tarea funcionando](../Services.png)
